--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -74,3 +74,9 @@ spring.datasource.druid.aop-patterns= # Spring¼à¿ØAOPÇĞÈëµã£¬Èçx.y.z.service.*,Å
 #²»Í¬Ä¿Â¼ÏÂµÄÈÕÖ¾¿ÉÅäÖÃ²»Í¬¼¶±ğ info,error
 logging.level.com.euler: debug 
 logging.level.org.springfromework.web: info
+
+##################redis#####################
+spring.redis.host=192.168.1.242
+spring.redis.port=6379
+spring.redis.password=kaipai123
+spring.redis.timeout=60000
